--- a/frontend-client/package.json
+++ b/frontend-client/package.json
@@ -6,10 +6,14 @@
     "@testing-library/jest-dom": "^5.11.10",
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.8.3",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
+    "react": "next",
+    "react-dom": "next",
     "react-draggable": "^4.4.3",
+    "react-epic-spinners": "^0.5.0",
     "react-scripts": "4.0.3",
+    "styled-icons": "^10.31.0",
+    "styled-off-canvas": "^1.0.1",
+    "styled-react-modal": "^2.0.1",
     "web-vitals": "^1.1.1"
   },
   "scripts": {
@@ -18,6 +22,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
+  "proxy": "http://localhost:80",
   "eslintConfig": {
     "extends": [
       "react-app",
