backend flexibility and directory renamings

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,8 +19,8 @@ services:
   mongo:
     image: mongo
     restart: unless-stopped
-    # ports:
-    #   - "27017:27017"
+    ports:
+      - "27017:27017"
     volumes:
       - mongodata:/data/db
 
