--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,6 +22,23 @@ services:
       - mongo
       - kafka
 
+  mail-service:
+    image: mail-service
+    restart: unless-stopped
+    environment:
+      SMTP_ADDRESS: smtp-server
+      SMTP_PORT: 25
+      MONGO_ADDRESS: mongodb://mongo:27017
+      KAFKA_ADDRESS: kafka:9092
+    depends_on: 
+      - mongo
+      - kafka
+      - smtp-server
+
+  smtp-server:
+    image: bytemark/smtp
+    restart: unless-stopped
+
   mongo:
     image: mongo
     restart: unless-stopped
@@ -32,8 +49,7 @@ services:
   
   zookeeper:
     image: wurstmeister/zookeeper
-    # ports:
-    #   - "2181:2181"
+
   kafka:
     image: wurstmeister/kafka
     restart: unless-stopped
